<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="don_t_be_evil">Don\'t be evil.</string>
    <string name="small_book_cover">Small book cover</string>
    <string name="genre">Genre</string>
    <string name="title">Title</string>
    <string name="similar_books">Similar Books</string>
    <string name="reviews">Reviews</string>
    <string name="rated_id">rated id</string>
    <string name="updates">Updates</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="download_large_images">Download large Images?</string>
    <string name="edit">Edit</string>
    <string name="enabled">Enabled</string>
    <string name="run">Run</string>
    <string name="internet_error">Internet Connection is unstable</string>
    <string name="update_schedule">Update schedule</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="all_days">All days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="most_viewed_books">Most Viewed Books</string>
    <string name="add_to_watch_list">Add to watch list</string>
    <string name="watch_list">Watch List</string>
</resources>
