<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hours"
                android:textColor="@color/white"
                android:textSize="24sp"/>


            <ImageView
                android:id="@+id/hour_up"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_expand_less_black_24dp"/>

            <TextView
                android:id="@+id/hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:maxLength="2"
                android:textColor="@color/white"
                android:textSize="24sp"/>

            <ImageView
                android:id="@+id/hour_down"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_expand_more_black_24dp"/>

            <CheckBox
                android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"/>

            <CheckBox
                android:id="@+id/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"/>

            <CheckBox
                android:id="@+id/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"/>

            <CheckBox
                android:id="@+id/thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"/>

            <TextView
                android:id="@+id/cancel_changes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/primary_button_default"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:textSize="24sp"/>


        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/minutes"
                android:textColor="@color/white"
                android:textSize="24sp"/>

            <ImageView
                android:id="@+id/minute_up"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_expand_less_black_24dp"/>

            <TextView
                android:id="@+id/minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:maxLength="2"
                android:textColor="@color/white"
                android:textSize="24sp"/>

            <ImageView
                android:id="@+id/minute_down"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_expand_more_black_24dp"/>

            <CheckBox
                android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"/>

            <CheckBox
                android:id="@+id/saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"/>

            <CheckBox
                android:id="@+id/sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"/>

            <CheckBox
                android:id="@+id/all_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_days"/>

            <TextView
                android:id="@+id/save_changes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/primary_button_default"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="24sp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
