<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_margin="16dp"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/download_large_images"
            android:textSize="18sp"/>

        <Switch
            android:id="@+id/download_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/update_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_schedule"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/update_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            tools:text="Sunday at 6"/>

        <CheckBox
            android:id="@+id/sync_enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layoutDirection="rtl"
            android:text="@string/enabled"/>


        <Button
            android:id="@+id/run_sync"
            style="@style/SmallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/sync_enabled"
            android:text="@string/run"/>
        <Button
            android:id="@+id/edit_schedule"
            style="@style/SmallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sync_enabled"
            android:layout_toLeftOf="@id/run_sync"
            android:text="@string/edit"/>


        <TextView
            android:id="@+id/last_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/edit_schedule"
            android:layout_alignParentBottom="true"
            tools:text="Last update at tuesday at 5"/>

    </RelativeLayout>
</LinearLayout>